# nrs

./: README.md  pyproject.toml
nrs/: disassembler.py  fileform.py  method.py  nsifiledump.py  nsisdump.py  nsisfile.py
nrs/ext/zlibnsis/: INFBLOCK.c  ZLIB.h  ZUTIL.h  __init__.py  zlibnsis.i  zlibnsis.py  zlibnsis_wrap.c
nrs/ida/: proc_old.py
nrs/strings/: __init__.py  nsis2_unicode.py
